# skillsafe

./: README.md  pyproject.toml  skillsafe.py  test_skillsafe.py
test_skills/malicious-skill/: SKILL.md
test_skills/malicious-skill/scripts/: helper.py
test_skills/safe-skill/: SKILL.md
