[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "skillsafe"
version = "1.0.0"
description = "Agent Skill Security Scanner — detect malicious patterns in AgentSkills"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kris Kimmerle" },
]
keywords = [
    "security", "agent", "skills", "scanner", "static-analysis",
    "agentskills", "llm", "ai-agent", "supply-chain", "malware",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/skillsafe"
Repository = "https://github.com/kriskimmerle/skillsafe"
Issues = "https://github.com/kriskimmerle/skillsafe/issues"

[project.scripts]
skillsafe = "skillsafe:main"
